[package]
name = "human-time"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/manlge/human-time"
description = "This is a library for human readable elapsed time string"
keywords = ["human", "time", "elapsed", "duration"]

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
human-time-macros ={ version="0"}
