[package]
description = "This is a library for human readable elapsed time string"
edition = "2021"
keywords = ["human", "time", "elapsed", "duration"]
license = "Apache-2.0"
name = "human-time"
readme = "README.md"
repository = "https://github.com/manlge/human-time"
version = "0.1.3"

[lib]

[dependencies]
human-time-macros = {version = "^0.1.6"}
